# sec_scan_git

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Notifications.tsx  SeverityBadge.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Findings.tsx  History.tsx  Login.tsx  Repositories.tsx  RepositoryDetail.tsx  Scans.tsx  SecurityAlerts.tsx  Trends.tsx  Users.tsx
frontend/src/services/: api.ts
frontend/src/stores/: useStore.ts
frontend/src/types/: index.ts
infrastructure/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  init-db.sql  nginx.conf
infrastructure/docker/migrations/: 20260119_add_ai_triage.sql
infrastructure/kubernetes/: api-deployment.yaml  namespace.yaml
infrastructure/terraform/: main.tf
patterns/: iac_checks.yaml  sast_rules.yaml  secrets.yaml
scripts/: setup.sh
services/scanner-worker/: scheduler.py  worker.py
src/github_security_scanner/: __init__.py  __main__.py  cli.py
src/github_security_scanner/analyzers/: __init__.py  api_scanner.py  base.py  history.py  iac.py  pattern_engine.py  sast.py  secrets.py  vulnerabilities.py
src/github_security_scanner/api/: __init__.py  alerts_router.py  app.py  auth.py  security.py
src/github_security_scanner/classifiers/: __init__.py  severity.py  state.py
src/github_security_scanner/core/: __init__.py  config.py  models.py  scanner.py
src/github_security_scanner/dashboard/: __init__.py  console.py  views.py
src/github_security_scanner/github/: __init__.py  app_auth.py  client.py  rate_limiter.py  repository.py  security_alerts.py
src/github_security_scanner/reporters/: __init__.py  base.py  csv_reporter.py  html_reporter.py  json_reporter.py  sarif_reporter.py
src/github_security_scanner/storage/: __init__.py  database.py  models.py  postgres_database.py
src/github_security_scanner/utils/: __init__.py  ai_triage.py  cache.py  fingerprint.py  git.py  parallel.py  repo_cache.py  sanitizer.py  secret_validation.py  secure_logging.py
tests/: __init__.py  conftest.py  test_classifiers.py  test_sast.py  test_secrets.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: Badge.tsx  Button.tsx  Card.tsx  Charts.tsx  DataTable.tsx  EmptyState.tsx  Input.tsx  Layout.tsx  LoadingSpinner.tsx  PageHeader.tsx
web/src/hooks/: useApi.ts
web/src/pages/: Compare.tsx  Dashboard.tsx  FindingDetail.tsx  Findings.tsx  NewScan.tsx  Repositories.tsx  ScanDetail.tsx  Scans.tsx
web/src/types/: index.ts
